these_pasteur/exemples/DoEsteRML/test/good/t2.strl
signal s in
  present s then print "ERROR" else print "OK" end
end.