these_pasteur/exemples/DoEsteRML/test/bad/bad1.strl
signal s in
  present s then emit s end
end.